Final Update Credit Card  Fraud Detection.ipynb

--- a/Credit Card  Fraud Detection.ipynb
+++ b/Credit Card  Fraud Detection.ipynb
@@ -762,8 +762,76 @@
     "## Relevant Questions and Proposed Solutions"
    ]
   },
-  
   {
+   "cell_type": "markdown",
+   "id": "63aa3a92",
+   "metadata": {},
+   "source": [
+    "### 1. Data Cleaning Including Missing Values, Outliers, and Multi-Collinearity\n",
+    " ### To kick things off, we needed to clean the data before diving into the analysis. We started by checking for any missing values, which is pretty crucial since gaps in data can lead to misleading results. We found a few missing spots but handled them by filling them with averages or medians, depending on what made the most sense. Next up were the outliers, those pesky extreme values that can skew the data. We discovered quite a few and decided it was best to remove them to keep our analysis on track."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d642e16",
+   "metadata": {},
+   "source": [
+    "### 2. Describe Your Fraud Detection Model in Elaboration\n",
+    "### For detecting fraud, we chose to use a Random Forest Classifier. It’s like having a team of decision-makers (or trees) that each look at the data and then combine their opinions for a final decision. This approach is great because it can handle a lot of complexity and variability in the data. Since our dataset had way more normal transactions than fraudulent ones, we adjusted the model to pay extra attention to those rare fraud cases. After some thorough training and tweaking of the model settings, we were ready to see how well it performed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec3f2de",
+   "metadata": {},
+   "source": [
+    "### How Did You Select Variables to Be Included in the Model?\n",
+    "### When it came to picking the features to include in our model, we started by looking at how each feature correlated with the target variable, whether a transaction was fraudulent or not. We used some tools like correlation matrices and feature importance scores from our Random Forest to see which features really mattered. Categorical features needed some transformation, so we used label encoding to make them compatible with our model. In the end, we focused on features that seemed to have a strong connection to fraud while keeping things as straightforward as possible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d388e3e6",
+   "metadata": {},
+   "source": [
+    "### 4. Demonstrate the Performance of the Model by Using the Best Set of Tools\n",
+    "### After training our Random Forest model, we put it to the test using various performance metrics. The results were impressive! We looked at accuracy, precision, recall, and the F1-score, and everything pointed to a high-performing model. The ROC-AUC score was a whopping 0.99, indicating that our model was excellent at telling the difference between fraudulent and legitimate transactions. We also visualized this with a ROC curve, which helped illustrate the model’s ability to distinguish between the two classes effectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6615a787",
+   "metadata": {},
+   "source": [
+    "### 5. What Are the Key Factors That Predict Fraudulent Customers?\n",
+    "### As we dug deeper into the model, certain factors stood out as strong predictors of fraud. Key among these were the transaction amount, the type of transaction, and how account balances changed during transactions. For instance, larger amounts or unusual transaction types tended to correlate with fraud. Our model's feature importance scores helped confirm this, highlighting these factors as crucial in predicting fraud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55e2728",
+   "metadata": {},
+   "source": [
+    "### 6. Do These Factors Make Sense? If Yes, How? If Not, How Not?\n",
+    "### Absolutely! The factors we identified align well with what we know about fraud. Large transaction amounts often raise red flags because they deviate from the norm. Similarly, certain transaction types might be more prone to fraud, like international transfers. A sudden spike in outgoing transactions could also suggest unauthorized access. So, it makes sense that our model relies on these factors to detect fraud effectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce379e9a",
+   "metadata": {},
+   "source": [
+    "### 7. What Kind of Prevention Should Be Adopted While Company Updates Its Infrastructure?\n",
+    "### As the company considers updating its infrastructure, it's crucial to implement proactive fraud detection systems. Using machine learning models like ours in real time will help catch fraudulent transactions as they happen. Regularly updating the model with new data is also vital to adapt to emerging fraud trends. Additionally, strengthening data security with measures like two-factor authentication and anomaly detection algorithms can help protect against unauthorized access. It's essential to create a system that learns and improves over time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd2646a",
+   "metadata": {},
+   "source": [
+    "### 8. Assuming These Actions Have Been Implemented, How Would You Determine if They Work?\n",
+    "### To see if our fraud detection measures are effective, the company should keep an eye on key metrics like the rate of fraudulent transactions, how many legitimate transactions are wrongly flagged, and overall customer satisfaction. Regularly checking the model's performance using metrics like ROC-AUC scores and confusion matrices will give insights into how well it's doing. Plus, reviewing flagged transactions will help refine the model further, ensuring it catches fraud without impacting regular users."
    ]
   },
   {
